other/block-kubectl-cp/.chainsaw-test/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bkc-podlabel-ns
