other/block-kubectl-cp/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: bkc-podlabel-ns
spec:
  containers:
    - name: busybox
      image: busybox:1.35
      command: [ "/bin/sh", "-c" ]
      args:
        - touch /test1.txt
        - sleep 300
