other/block-kubectl-cp/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: block-kubectl-cp
status:
  conditions:
    - reason: Succeeded
      status: "True"
      type: Ready
