other/block-kubectl-cp/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: block-kubectl-cp-by-pod-label
spec:
  steps:
    - name: step-01
      try:
        - apply:
            file: ../block-kubectl-cp.yaml
        - assert:
            file: policy-ready.yaml
    - name: step-02
      try:
        - apply:
            file: ns.yaml
        - apply:
            file: pods.yaml
    - name: step-03
      try:
        - script:
            content: if kubectl cp -n bkc-podlabel-ns pod01:/test1.txt ./test1.txt; then exit 1;else
              exit 0; fi
    - name: step-04
      try:
        - script:
            content: rm -rf ./test1.txt
